# xfusion-oracle

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
.dfx/local/: network-id
.dfx/local/canisters/oracle/: index.js  oracle.wasm  service.did  service.did.d.ts  service.did.js
.dfx/local/lsp/: 6wul2-rpbhu-lsyqq-fsjea.did
src/: archive.rs  lib.rs  ohlc.rs  oracle.did  ring_buffer.rs  state.rs  types.rs
src/backend/: Cargo.toml  lib.rs  merkle.rs  ohlc.rs  oracle.did  ring_buffer.rs  state.rs
src/frontend/: .dockerignore  index.html  package-lock.json  package.json  tailwind.config.cjs
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/components/: Footer.tsx  Header.tsx
src/frontend/src/components/asset-wall/: AssetWall.tsx
src/frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
src/frontend/src/components/ui/: Button.tsx  Card.tsx  Hero.tsx  LinkedInLogo.tsx  XLogo.tsx
src/frontend/src/data/: mockAssets.ts
src/frontend/src/hooks/: useOracleData.ts  useTimeAgo.ts
src/frontend/src/pages/: AssetsPage.tsx  HomePage.tsx
src/frontend/src/services/: oracle.ts
src/pyth_feeder/: Cargo.toml  lib.rs  pyth.rs  pyth_feeder.did  state.rs  types.rs
