[package]
name = "pyth-feeder-canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-cdk-timers = "0.10"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
base64 = "0.21"
